media/whisparr/whisparr-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: whisparr
  labels:
    kubernetes.io/metadata.name: whisparr
    media-ns: authorized
