media/whisparr/whisparr.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: whisparr
  namespace: whisparr
  labels:
    app: whisparr
spec:
  replicas: 1
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: whisparr
  template:
    metadata:
      labels:
        app: whisparr
        media-app: authorized
    spec:
      terminationGracePeriodSeconds: 10
      containers:
      - name: whisparr
        image: ghcr.io/hotio/whisparr:v3-3.0.0.1163
        ports:
          - name: http
            containerPort: 6969
        volumeMounts:
          - name: whisparr-config
            mountPath: /config
          - name: whisparr-downloads
            mountPath: /downloads
        resources:
          requests:
            cpu: 50m
            memory: 128Mi
          limits:
            cpu: 200m
            memory: 512Mi
      volumes:
        - name: whisparr-config
          persistentVolumeClaim:
            claimName: whisparr-pvc
        - name: whisparr-downloads
          persistentVolumeClaim:
            claimName: whisparr-download-pvc
