media/whisparr/whisparr-ingressroute.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: whisparr-ingressroute
  namespace: whisparr
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`whisparr.ltc.tsphotoclicks.net`)
      middlewares:
        - name: authentik-middleware
          namespace: authentik
      services:
        - name: whisparr
          port: 6969
  tls:
    secretName: sabnzbd-internal-secret
---
apiVersion: v1
kind: Service
metadata:
  name: whisparr
  namespace: whisparr
spec:
  selector:
    app: whisparr
  ports:
    - port: 6969
      targetPort: 6969
