media/whisparr/whisparr-network.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: whisparr-network
  namespace: whisparr
spec:
  podSelector:
    matchLabels:
      app: whisparr
  policyTypes:
    - Ingress
    - Egress
  ingress:
    - from:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: traefik
        podSelector:
          matchLabels:
            app.kubernetes.io/name: traefik
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: uptimekuma
        podSelector:
          matchLabels:
            app: uptimekuma
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: prowlarr
        podSelector:
          matchLabels:
            app: prowlarr
      ports:
        - protocol: TCP
          port: 6969
  egress:
    - to:
      - namespaceSelector:
          matchLabels:
            kubernetes.io/metadata.name: gluetun
      ports:
        - protocol: TCP
          port: 8888
    - to:
      - namespaceSelector: {}
      ports:
        - protocol: UDP
          port: 53
    - to:
      - ipBlock:
          cidr: 10.42.0.0/16
    - to:
      - ipBlock:
          cidr: 10.43.0.0/16
